@@ -1,4 +1,4 @@
-Copyright 2011-2018 Howard Chu, Symas Corp.
+Copyright 2011-2020 Howard Chu, Symas Corp.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
